--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,9 @@ php:
   - "5.5"
   - "5.4"
   - "5.3"
+
+before_script:
+  - php composer.phar install
+
 script: vendor/phpunit/phpunit/composer/bin/phpunit -c test/phpunit.xml
+
