--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,6 @@ before_script:
   - php composer.phar install
   - chmod 777 travis.phpunit.xml
 
-script: vendor/phpunit/phpunit/composer/bin/phpunit -c travis.phpunit.xml
+script:
+  - cd $TRAVIS_BUILD_DIR;
+  - vendor/phpunit/phpunit/composer/bin/phpunit -c $TRAVIS_BUILD_DIR/travis.phpunit.xml
